fdo#72391 empty formula is "rpt:", not starts with "rpt:"

(all?) functions start with rpt:
correction of erroneous cleanup wrt to equalsAsciiL

Change-Id: I0568ef28a1e677f68016b8593c2b30d0ffba1bb5